--- a/functions/_em.scss
+++ b/functions/_em.scss
@@ -3,10 +3,9 @@
 //
 // Description: font size in EM
 //
-// PARAMETERS:
-//
-//      $target: size number
-//      $context: context for calculation (16 by default)
+// Parameters:
+//  - $target: size number
+//  - $context: context for calculation (16 by default)
 //
 // ============================================================================================= //
 
