--- a/mixins/_clearfix.scss
+++ b/mixins/_clearfix.scss
@@ -4,13 +4,11 @@
 // Version: 1.0.5
 // Description: clearfix with possibility to reset
 //
-// PARAMETERS:
+// Parameters:
+//  - $clearfix: boolean (true by default)
 //
-//      $clearfix: boolean (true by default)
-//
-// DEPENDENCIES:
-//
-//      Helpers: _helpers.scss
+// Dependencies:
+//  - Helpers: _helpers.scss
 //
 // ============================================================================================= //
 
