--- a/mixins/_font-face.scss
+++ b/mixins/_font-face.scss
@@ -5,11 +5,10 @@
 // Description: generates a "font-face" with all formats of web fonts
 // Compatibility: IE 7+, Firefox 4+, Chrome 1+, Safari 5+, Opera 15+
 //
-// PARAMETERS:
-//
-//      $name: name for the "font-family" parameter
-//      $path: the path to the font file. Enter only the filename if no folder is present in the
-//             "fonts" folder, the path begins always by "fonts/".
+// Parameters:
+//  - $name: name for the "font-family" parameter
+//  - $path: the path to the font file. Enter only the filename if no folder is present in the
+//           "fonts" folder, the path begins always by "fonts/".
 //
 // ============================================================================================= //
 
