--- a/mixins/_gradient.scss
+++ b/mixins/_gradient.scss
@@ -4,15 +4,14 @@
 // Version: 1.6.0
 // Description: create simple linear gradient
 //
-// PARAMETERS:
-//
-//      $angle: gradient orientation, "vertical" or "horizontal"
-//      $startColor: starting color in HEX or RGBa
-//      $endColor: ending color in HEX or RGBa
-//      $startLocation: starting percentage (0% by default)
-//      $endLocation: ending percentage (100% by default)
-//      $prefix: boolean (false by default)
-//      $ieFilter: boolean (false by default), using for IE7+. Important for IE9!
+// Parameters:
+//  - $angle: gradient orientation, "vertical" or "horizontal"
+//  - $startColor: starting color in HEX or RGBa
+//  - $endColor: ending color in HEX or RGBa
+//  - $startLocation: starting percentage (0% by default)
+//  - $endLocation: ending percentage (100% by default)
+//  - $prefix: boolean (false by default)
+//  - $ieFilter: boolean (false by default), using for IE7+. Important for IE9!
 //
 // ============================================================================================= //
 
