--- a/mixins/_opacity.scss
+++ b/mixins/_opacity.scss
@@ -5,9 +5,8 @@
 // Description:
 // Compatibility: IE 7+, Firefox 4+, Chrome 1+, Safari 5+, Opera 15+
 //
-// PARAMETERS:
-//
-//      $alpha: number alpha between 0 and 1
+// Parameters:
+//  - $alpha: number alpha between 0 and 1
 //
 // ============================================================================================= //
 
