--- a/mixins/_placeholder.scss
+++ b/mixins/_placeholder.scss
@@ -5,9 +5,8 @@
 // Description: make different colors for the input/textarea placeholder
 // Compatibility: IE 10+, Firefox 4+, Chrome 1+, Safari 5+, Opera 15+
 //
-// PARAMETERS:
-//
-//      $color: color in HEX or RGBa
+// Parameters:
+//  - $color: color in HEX or RGBa
 //
 // ============================================================================================= //
 
