--- a/mixins/_rem-size.scss
+++ b/mixins/_rem-size.scss
@@ -4,13 +4,11 @@
 // Version: 1.2.1
 // Description: add "font-size" in REM for all recent browsers and in PX for IE7/8
 //
-// PARAMETERS:
+// Parameters:
+//  - $size: size number
 //
-//      $size: size number
-//
-// DEPENDENCIES:
-//
-//      Function: _rem.scss
+// Dependencies:
+//  - Function: _rem.scss
 //
 // ============================================================================================= //
 
