--- a/mixins/_selection.scss
+++ b/mixins/_selection.scss
@@ -4,11 +4,10 @@
 // Version: 1.3.0
 // Description: change the mouse selection style
 //
-// PARAMETERS:
-//
-//      $background: background color in HEX or RGBa
-//      $color: font color in HEX or RGBa
-//      $prefix: boolean (false by default)
+// Parameters:
+//  - $background: background color in HEX or RGBa
+//  - $color: font color in HEX or RGBa
+//  - $prefix: boolean (false by default)
 //
 // ============================================================================================= //
 
