--- a/mixins/_box-sizing.scss
+++ b/mixins/_box-sizing.scss
@@ -4,10 +4,9 @@
 // Version: 1.3.0
 // Description: add "box-sizing" to element
 //
-// PARAMETERS:
-//
-//      $boxSize: "content-box" or "border-box"
-//      $prefix: boolean (false by default)
+// Parameters:
+//  - $boxSize: "content-box" or "border-box"
+//  - $prefix: boolean (false by default)
 //
 // ============================================================================================= //
 
