--- a/mixins/_box-sizing.scss
+++ b/mixins/_box-sizing.scss
@@ -1,7 +1,7 @@
 // ============================================================================================= //
 // Mixin: box-sizing
 //
-// Version: 1.3.0
+// Version: 1.3.1
 // Description: add "box-sizing" to element
 //
 // Parameters:
@@ -14,11 +14,9 @@
 
     box-sizing: $boxSize;
 
-    @if $oldie == false {
-        @if $prefix {
-            @each $prefix in -moz- {
-                #{$prefix}box-sizing: $boxSize;
-            }
+    @if $prefix {
+        @each $prefix in -moz-, -webkit- {
+            #{$prefix}box-sizing: $boxSize;
         }
     }
 }
