--- a/_mercury.scss
+++ b/_mercury.scss
@@ -1,7 +1,7 @@
 // ============================================================================================= //
 // Project: Mercury
 //
-// Version: 1.1.0.beta2
+// Version: 1.1.0
 //
 // Author: Boris DAMEVIN
 // GitHub: https://github.com/agenceepsilon/sass-mercury
