--- a/mixins/_breakpoint.scss
+++ b/mixins/_breakpoint.scss
@@ -4,7 +4,7 @@
 // Version: 2.0.0
 // Description: make your content responsive !
 //
-// Sizes:
+// Parameters:
 //  - $small: 480px -> Mobile
 //  - $medium: 768px -> Tablet
 //  - $large: 960px -> Desktop
