--- a/_helpers.scss
+++ b/_helpers.scss
@@ -89,15 +89,15 @@
         visibility: hidden;
     }
 }
-//.hidden--tablet {
-//    @include breakpoint($medium, $large) {
-//        display: none;
-//        visibility: hidden;
-//    }
-//}
-//.hidden--desktop {
-//    @include breakpoint($large) {
-//        display: none;
-//        visibility: hidden;
-//    }
-//}
+.hidden--tablet {
+    @include breakpoint($medium, $large) {
+        display: none;
+        visibility: hidden;
+    }
+}
+.hidden--desktop {
+    @include breakpoint($large) {
+        display: none;
+        visibility: hidden;
+    }
+}
