--- a/_helpers.scss
+++ b/_helpers.scss
@@ -82,22 +82,22 @@
 .hidden {
     display: none;
     visibility: hidden;
-}
-.hidden--mobile {
-    @include breakpoint($max-width: $medium) {
-        display: none;
-        visibility: hidden;
+    &--mobile {
+        @include breakpoint($max-width: $medium) {
+            display: none;
+            visibility: hidden;
+        }
     }
-}
-.hidden--tablet {
-    @include breakpoint($medium, $large) {
-        display: none;
-        visibility: hidden;
+    &--tablet {
+        @include breakpoint($medium, $large) {
+            display: none;
+            visibility: hidden;
+        }
     }
-}
-.hidden--desktop {
-    @include breakpoint($large) {
-        display: none;
-        visibility: hidden;
+    &--desktop {
+        @include breakpoint($large) {
+            display: none;
+            visibility: hidden;
+        }
     }
 }
