--- a/_helpers.scss
+++ b/_helpers.scss
@@ -83,6 +83,8 @@
     display: none;
     visibility: hidden;
     &--mobile {
+        display: none;
+        visibility: hidden;
         @include breakpoint($medium) {
             display: block;
             visibility: visible;
@@ -95,7 +97,7 @@
             display: none;
             visibility: hidden;
         }
-        @include breakpoint($large){
+        @include breakpoint($large) {
             display: block;
             visibility: visible;
         }
