--- a/mixins/_breakpoint.scss
+++ b/mixins/_breakpoint.scss
@@ -5,15 +5,17 @@
 // Description: make your content responsive !
 //
 // Parameters:
-//  - $small: 480px -> Mobile
+//  - $very-small:   -> iPhone
+//  - $small: 480px  -> Mobile
 //  - $medium: 768px -> Tablet
-//  - $large: 960px -> Desktop
-//  - $wide: 1200px -> More...
+//  - $large: 960px  -> Desktop
+//  - $wide: 1200px  -> More...
 //
 // ============================================================================================= //
 
 $media-queries: true !default;
 
+$very-small: 320px !default;
 $small: 480px !default;
 $medium: 768px !default;
 $large: 960px !default;
