--- a/_mercury.scss
+++ b/_mercury.scss
@@ -1,7 +1,7 @@
 // ============================================================================================= //
 // Project: Mercury
 //
-// Version: 1.1.0
+// Version: 2.0.0-beta.3
 //
 // Author: Boris DAMEVIN
 // GitHub: https://github.com/agenceepsilon/sass-mercury
