--- a/mixins/_retina.scss
+++ b/mixins/_retina.scss
@@ -11,6 +11,7 @@
 //
 // Inspired by:
 //  - https://github.com/kaelig/hidpi
+//  - http://www.brettjankord.com/2012/11/28/cross-browser-retinahigh-resolution-media-queries/
 //
 // ============================================================================================= //
 
@@ -18,7 +19,7 @@
     $image-name: "#{$image}.#{$extension}";
     $image-hd-name: "#{$image}#{$postfix}.#{$extension}";
 
-    @media(-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
+    @media(-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
         @if $image {
             background-image: image-url($image-hd-name);
             background-size: image-width($image-name) image-height($image-name);
