--- a/mixins/_retina.scss
+++ b/mixins/_retina.scss
@@ -19,7 +19,7 @@
     $image-name: "#{$image}.#{$extension}";
     $image-hd-name: "#{$image}#{$postfix}.#{$extension}";
 
-    @media(-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    @media(-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
         @if $image {
             background-image: image-url($image-hd-name);
             background-size: image-width($image-name) image-height($image-name);
