Delete inside versions
- Description missing update

--- a/mixins/_font-face.scss
+++ b/mixins/_font-face.scss
@@ -1,8 +1,8 @@
 // ============================================================================================= //
 // Mixin: font-face
 //
-// Version: 1.0.0
 // Description: generates a "font-face" with all formats of web fonts
+//
 // Compatibility: IE 7+, Firefox 4+, Chrome 1+, Safari 5+, Opera 15+
 //
 // Parameters:
