--- a/mixins/_grid.scss
+++ b/mixins/_grid.scss
@@ -1,8 +1,8 @@
 // ============================================================================================= //
 // Mixin: grid();
 //
-// Version: 1.0.0
 // Description: generate your grid
+//
 // Compatibility: IE 7+, Firefox 5+, Chrome 20+, Safari 5+, Opera 10+
 //
 // Parameters:
