--- a/mixins/_opacity.scss
+++ b/mixins/_opacity.scss
@@ -1,8 +1,8 @@
 // ============================================================================================= //
 // Mixin: opacity
 //
-// Version: 1.1.0
-// Description:
+// Description: generate opacity for Interet Explorer and recents browsers in same time
+//
 // Compatibility: IE 7+, Firefox 4+, Chrome 1+, Safari 5+, Opera 15+
 //
 // Parameters:
