--- a/_mercury.scss
+++ b/_mercury.scss
@@ -1,7 +1,7 @@
 // ============================================================================================= //
 // Project: Mercury
 //
-// Version: 2.0.0-beta.5
+// Version: 2.0.0-rc.2
 //
 // Author: Boris DAMEVIN
 // GitHub: https://github.com/agenceepsilon/sass-mercury
