--- a/mixins/_breakpoint.scss
+++ b/mixins/_breakpoint.scss
@@ -69,7 +69,7 @@ $max-desktop: $large !default;
         @if $min-width {
             @media all and (min-width: $min-width) {
                 @if $max-width {
-                    @media (max-width: $max-width) {
+                    @media (max-width: $max-width - 1) {
                         @if $prefix {
                             #{"." + $prefix} {
                                 @content;
@@ -89,7 +89,7 @@ $max-desktop: $large !default;
                 }
             }
         } @else if $max-width {
-            @media all and (max-width: $max-width) {
+            @media all and (max-width: $max-width - 1) {
                 @if $prefix {
                     #{"." + $prefix} {
                         @content;
