--- a/mixins/_retina-legacy.scss
+++ b/mixins/_retina-legacy.scss
@@ -1,9 +1,8 @@
 // =============================================================================================== //
-//
 // WARNING: Use this mixin that if you use another library that Compass, like LibSass for example,
 //          to generate Sass files !!!
 //
-// Mixin: retina legacy
+// Mixin: retina-legacy
 //
 // Description: make HD images for HD mobiles screens
 //
@@ -11,6 +10,7 @@
 //  - $image: file path, without extension
 //  - $width: file width
 //  - $height: file height
+//  - $pixel-ratio: screen minimal pixel ratio, 1.5 by default
 //  - $extension: file extension ("png" by default)
 //  - $postfix: postfix for HD images reference ("_2x" by defaut)
 //
@@ -20,11 +20,11 @@
 //
 // =============================================================================================== //
 
-@mixin retina-legacy($image, $width, $height, $extension: png, $postfix: _2x) {
+@mixin retina-legacy($image, $width, $height, $pixel-ratio: 1.5, $extension: png, $postfix: _2x) {
     $image-name: "#{$image}.#{$extension}";
     $image-hd-name: "#{$image}#{$postfix}.#{$extension}";
 
-    @media(-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
+    @media(-webkit-min-device-pixel-ratio: $pixel-ratio), (min-resolution: $pixel-ratio * 96dpi) {
         background-image: url($image-hd-name);
         background-size: #{$width * 1px} #{$height * 1px};
     }
