--- a/mixins/_retina.scss
+++ b/mixins/_retina.scss
@@ -5,6 +5,7 @@
 //
 // Parameters:
 //  - $image: file name, without extension
+//  - $pixel-ratio: screen minimal pixel ratio, 1.5 by default
 //  - $extension: file extension ("png" by default)
 //  - $postfix: postfix for HD images reference ("_2x" by defaut)
 //
@@ -14,11 +15,11 @@
 //
 // ============================================================================================= //
 
-@mixin retina($image, $extension: png, $postfix: _2x) {
+@mixin retina($image, $pixel-ratio: 1.5, $extension: png, $postfix: _2x) {
     $image-name: "#{$image}.#{$extension}";
     $image-hd-name: "#{$image}#{$postfix}.#{$extension}";
 
-    @media(-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
+    @media(-webkit-min-device-pixel-ratio: $pixel-ratio), (min-resolution: $pixel-ratio * 96dpi) {
         background-image: image-url($image-hd-name);
         background-size: image-width($image-name) image-height($image-name);
     }
