--- a/mixins/_grid.scss
+++ b/mixins/_grid.scss
@@ -10,7 +10,7 @@
 //  - $prefix: boolean
 //  - $cssBase: boolean
 //
-// Dependencies:
+// Dependencie:
 //  - Mixin: _breakpoint.scss
 //
 // ============================================================================================= //
