--- a/mixins/_opacity.scss
+++ b/mixins/_opacity.scss
@@ -5,7 +5,7 @@
 //
 // Compatibility: IE 7+, Firefox 4+, Chrome 1+, Safari 5+, Opera 15+
 //
-// Parameters:
+// Parameter:
 //  - $alpha: number alpha between 0 and 1
 //
 // ============================================================================================= //
