--- a/mixins/_rem-size.scss
+++ b/mixins/_rem-size.scss
@@ -3,10 +3,10 @@
 //
 // Description: add "font-size" in REM for all recent browsers and in PX for IE7/8
 //
-// Parameters:
+// Parameter:
 //  - $size: size number
 //
-// Dependencies:
+// Dependencie:
 //  - Function: _rem.scss
 //
 // ============================================================================================= //
