#13: mixins retina renamed

--- a/_mercury.scss
+++ b/_mercury.scss
@@ -32,5 +32,5 @@ $oldie: false !default;
 @import "mixins/_opacity";
 @import "mixins/_rem-size";
 @import "mixins/_retina";
-@import "mixins/_retina-legacy";
+@import "mixins/_retina-compass";
 @import "mixins/_selection";
