--- a/mixins/_retina.scss
+++ b/mixins/_retina.scss
@@ -8,8 +8,8 @@
 //
 // Parameters:
 //  - $image: file path, without extension
-//  - $width: file width
-//  - $height: file height
+//  - $width: original file width (ratio 1)
+//  - $height: original file height(ratio 1)
 //  - $pixel-ratio: screen minimal pixel ratio, 1.5 by default
 //  - $extension: file extension ("png" by default)
 //  - $postfix: postfix for HD images reference ("_2x" by defaut)
