--- a/_helpers.scss
+++ b/_helpers.scss
@@ -1,10 +1,10 @@
 // ============================================================================================= //
-//                                      CSS HELPERS LIBRARY                                      //
+//                                            HELPERS                                            //
 // ============================================================================================= //
 
-// ------------------------------------------- //
+// ------------------------------------------------------------------------- //
 // POSITION CLASS
-// ------------------------------------------- //
+// ------------------------------------------------------------------------- //
 
 .left {
     float: left;
@@ -16,9 +16,9 @@
     margin: 0 auto;
 }
 
-// ------------------------------------------- //
+// ------------------------------------------------------------------------- //
 // CLEARFIX CLASS
-// ------------------------------------------- //
+// ------------------------------------------------------------------------- //
 
 .clearfix {
     &:before,
@@ -53,9 +53,9 @@
     }
 }
 
-// ------------------------------------------- //
+// ------------------------------------------------------------------------- //
 // TEXT-OVERFLOW
-// ------------------------------------------- //
+// ------------------------------------------------------------------------- //
 
 %ellipsis {
     overflow: hidden;
@@ -63,9 +63,9 @@
     text-overflow: ellipsis;
 }
 
-// ------------------------------------------- //
+// ------------------------------------------------------------------------- //
 // TEXT-HYPHENS
-// ------------------------------------------- //
+// ------------------------------------------------------------------------- //
 
 %hyphens {
     -webkit-hyphens: auto;
@@ -75,9 +75,9 @@
     hyphens: auto;
 }
 
-// ------------------------------------------- //
+// ------------------------------------------------------------------------- //
 // HIDDEN CLASS
-// ------------------------------------------- //
+// ------------------------------------------------------------------------- //
 
 .hidden {
     display: none;
