--- a/_mercury.scss
+++ b/_mercury.scss
@@ -8,22 +8,22 @@
 //
 // ============================================================================================= //
 
-// --------------------------------------------------------------- //
-//                   DEFAULT STATE OF VARIABLES                    //
-// --------------------------------------------------------------- //
+// ------------------------------------------------------------------------- //
+// DEFAULT STATE OF VARIABLES
+// ------------------------------------------------------------------------- //
 
 $oldie: false !default;
 
-// --------------------------------------------------------------- //
-//                            FUNCTIONS                            //
-// --------------------------------------------------------------- //
+// ------------------------------------------------------------------------- //
+// FUNCTIONS
+// ------------------------------------------------------------------------- //
 
 @import "functions/_em";
 @import "functions/_rem";
 
-// --------------------------------------------------------------- //
-//                              MIXINS                             //
-// --------------------------------------------------------------- //
+// ------------------------------------------------------------------------- //
+// MIXINS
+// ------------------------------------------------------------------------- //
 
 @import "mixins/_breakpoint";
 @import "mixins/_font-face";
