--- a/mixins/_gradient.scss
+++ b/mixins/_gradient.scss
@@ -9,12 +9,12 @@
 //  - $endColor: ending color in HEX or RGBa
 //  - $startLocation: starting percentage (0% by default)
 //  - $endLocation: ending percentage (100% by default)
-//  - $prefix: boolean (false by default)
+//  - $prefixes: boolean/array choose the prefix you want to use (default: -moz- -webkit- -o-)
 //  - $ieFilter: boolean (false by default), using for IE7+. Important for IE9!
 //
 // ============================================================================================= //
 
-@mixin gradient($angle, $startColor, $endColor, $startLocation: 0%, $endLocation: 100%, $prefix: false, $ieFilter: false) {
+@mixin gradient($angle, $startColor, $endColor, $startLocation: 0%, $endLocation: 100%, $prefixes: -moz- -webkit- -o-, $ieFilter: false) {
     $gradient: linear;
     $angleOld: null;
     $angleNorm: null;
@@ -31,8 +31,8 @@
     }
 
     background: #{$gradient}-gradient($angleNorm, $startColor $startLocation, $endColor $endLocation);
-    @if $prefix {
-        @each $prefix in -moz-, -webkit-, -o- {
+    @if $prefixes {
+        @each $prefix in $prefixes {
             background: #{$prefix}#{$gradient}-gradient($angleOld, $startColor $startLocation, $endColor $endLocation);
         }
     }
