Helpers: image replacement

--- a/_helpers.scss
+++ b/_helpers.scss
@@ -46,6 +46,16 @@
 }
 
 // ------------------------------------------------------------------------- //
+// IMAGE REPLACEMENT CLASS
+// ------------------------------------------------------------------------- //
+
+.ir {
+    font: 0/0 a;
+    text-shadow: none;
+    color: transparent;
+}
+
+// ------------------------------------------------------------------------- //
 // TEXT-OVERFLOW
 // ------------------------------------------------------------------------- //
 
