--- a/_mercury.scss
+++ b/_mercury.scss
@@ -1,7 +1,7 @@
 // ============================================================================================= //
 // Project: Mercury
 //
-// Version: 2.1.3-beta.1
+// Version: 2.1.3
 //
 // Author: Boris DAMEVIN
 // GitHub: https://github.com/agenceepsilon/sass-mercury
